# Tamagotchi-Project

./: .gitignore  Game.py  Player.py  README.md  Rules.md  Tamagotchi.py  class diagram.drawio  diagramme_fonctionnel.drawio  fonction.drawio  main.py  pyproject.toml  tamagotchi.py  test.py
.docs/: README.md
assets/: colors.tsx  settings.tsx
assets/esc/: esc.tmx  esc.tsx
assets/map_desert/textures/: DesertTilemap16x16.tsx
assets/map_maison/: green.tmx  map_maison.tmx  map_maison_red.tmx  red.tmx
assets/map_maison/textures/: Ground.tsx  back.tsx  ground_demo.tsx  tamagotchi_stat.tsx
assets/menu/: menu.tmx
assets/settings/: settings.tmx
src/: Console.py  Game.py  Player.py  Tamagotchi.py  button.py  clock.py  config.py  console.py  dzefgrth,.py  game_saver.py  gui.py  interraction.py  jeu.py  main.py  player.py  tamagotchi.py  tamagotchi000.py  test.py
src/app/controllers/: GameController.py  GamePersonalizerController.py  HomeController.py  __init__.py
src/app/main/: main.py
src/app/models/: Player.py  __init__.py
src/app/routes/: Routes.py
src/app/views/: .txt  game.txt  personalization.txt
src/lib/communication/: Request.py  Response.py  Router.py  __init__.py
src/lib/controller/: __init__.py
src/lib/controllers/: Controller.py
src/lib/event/: Event.py  Observer.py  __init__.py
src/lib/logger/: Logger.py  __init__.py
src/lib/view/: View.py  ViewHandler.py  __init__.py
src/lib/views/: View.py
src/models/: Player.py  tamagotchi_file.py
src/tamagoatchi/: __init__.py
src/tamagoatchi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tamagoatchi/app/: definitions.py
src/tamagoatchi/app/conf/: logging_config.yaml
src/tamagoatchi/app/controllers/: GameController.py  GamePersonalizeController.py  GamePersonalizerController.py  HomeController.py  __init__.py
src/tamagoatchi/app/main/: __init__.py  main.py
src/tamagoatchi/app/models/: Player.py  __init__.py  tamagotchi_file.py
src/tamagoatchi/app/routes/: Routes.py  __init__.py
src/tamagoatchi/app/time/: Clock.py  __init__.py
src/tamagoatchi/app/views/: .txt  game.txt  personalization.txt
src/tamagoatchi/assets/house/: house.tmx
src/tamagoatchi/assets/map_desert/: map_desert.tmx
src/tamagoatchi/assets/menu/: menu.tmx
src/tamagoatchi/assets/tamagotchis/: tamagotchis.tsx  tamagotchis.xcf
src/tamagoatchi/lib/communication/: Request.py  Response.py  Router.py  __init__.py
src/tamagoatchi/lib/controller/: __init__.py
src/tamagoatchi/lib/event/: Event.py  EventHandler.py  EventManager.py  Observer.py  __init__.py
src/tamagoatchi/lib/handlers/: ResourceHandler.py  SaveHandler.py  __init__.py
src/tamagoatchi/lib/logger/: Logger.py  __init__.py
src/tamagoatchi/lib/model/: Model.py  __init__.py
src/tamagoatchi/lib/session/: DictSession.py  __init__.py
src/tamagoatchi/lib/view/: View.py  ViewHandler.py  __init__.py
src/tamagoatchi/saves/: game.json  man.json  momo.json  moon.json  tama.json  test.json
src/tamgotchi_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.json  test_clock.py  test_game_saver.py  test_player.py  test_tamagotchi.py
(+33 files in other folders)
