[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tamgotchi-game"
version = "0.1"
dependencies=["keyboard"]
requires-python = ">= 3.12"
description = "Tamagotchi game is Isep's student coding project, it consist to play with 5 tamagotchi and not kill them."
authors = [
    {name = "Louis Dubois", email="louis.dubois@eleve.isep.fr"},
    {name = "Nicolas Clement",  email="nicolas.clement@eleve.isep.fr"},
    {name = "Ewen Daliguaud", email="ewen.daliguaud@eleve.isep.fr"},
    {name= "Louis Desjouis", email="louis.desjouis@eleve.isep.fr"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Cavernos/Tamagotchi-Project.git"

[project.optional-dependencies]
dev = [
"pylint >=2.14.0",
    "toml >= 0.10.2"
]
test = ["pytest>=8.1.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
minversion = "8.1.1"
addopts = "-ra -q"
testpaths = [
"tests"
]



